--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "express": "^4.17.1",
     "express-logger": "^0.0.3",
     "express-session": "^1.17.2",
+    "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
     "oauth": "^0.9.15",
+    "sequelize": "^6.6.5",
     "twitter": "^1.7.1",
     "util": "^0.12.4",
     "util-inspect": "^0.1.8"
