--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -9,6 +10,7 @@
     "mysql2": "^2.3.0",
     "node-fetch": "^2.6.1",
     "oauth": "^0.9.15",
+    "redis": "^3.1.2",
     "sequelize": "^6.6.5",
     "twitter": "^1.7.1",
     "util": "^0.12.4",
